styles.css
@import url(./styles/reset.css);
@import url(./styles/ui.css);

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

/* /////////////////////////////// */
/* /////////////////////////////// */

:root {
  --font-color: #0d0c22;
  --body-bg: #f3f3f6;
  --message-bg: white;

  --hero-font-size: clamp(2rem, 7vw + 1rem, 9rem);

  scroll-behavior: smooth;
}

body {
  background-color: var(--body-bg);
  color: var(--dark-color);
}

header {
  min-height: 100dvh;
  font-family: Inter, var(--font-sans-serif);
  background: linear-gradient(to bottom, var(--white) 0%, var(--light-bg) 100%);

  display: flex;
  flex-direction: column;
  justify-content: center;
  place-items: center;
}
header .logo {
  text-align: center;
  font-size: 2rem;
  font-weight: 600;
  margin-top: auto;
  margin-bottom: auto;
}
header h1 {
  font-weight: bold;
  text-align: center;
  max-width: 90vw;
  font-size: var(--hero-font-size);
  text-box-trim: trim-both;
  text-box-edge: cap text;
}
header p {
  margin-top: 1rem;
  text-align: center;
  max-width: 90vw;
  font-size: calc(var(--hero-font-size) / 1.618 / 1.618);
  font-weight: 200;
}
header a.btn {
  margin-top: auto;
  margin-bottom: auto;
}

#app {
  min-height: 100dvh;
  padding: 1rem;

  display: grid;
  align-items: start;
  grid-template-columns: 1fr min(450px, 100%) 1fr;
}

.login-card,
.edit-card {
  grid-column: 2 / -2;
  position: relative;
  padding: 3rem 2.5rem;
  background-color: var(--white);
  border-radius: 2rem;
  box-shadow: 0 0 0 1px var(--light-border-color);
  
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: stretch;
  gap: 1rem;
}

.tab-buttons {
  align-self: center;
  flex-shrink: 0;
  display: flex;
  justify-content: space-around;
  border-radius: 1rem;
  overflow: hidden;
  background-color: var(--light-bg);
}
.tab-buttons button {
  border-radius: 1rem;
  flex: 1;
  padding: 0.5rem 2rem;
  cursor: pointer;
  background: transparent;
  border: none;
  font-size: 1rem;
  color: var(--light-color);
}
.tab-buttons button.active {
  color: var(--white);
  font-weight: bold;
  background-color: var(--dark-bg);
}
.tab-content {
  display: none;
  position: relative;
}
.tab-content.active {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

/*//////////  Messages  //////////*/

#loginContainer.incorrect input {
  border-color: #ff9eb1;
  background-color: hsl(348, 100%, 95%);
}
#loginContainer.incorrect label {
  color: crimson;
}
#registerContainer.incorrect #usernameInputReg {
  border-color: #ff9eb1;
  background-color: hsl(348, 100%, 95%);
}
#registerContainer.incorrect label:has(#usernameInputReg) {
  color: crimson;
}

#registerContainer input.valid {
 border-color: #6ec540;
 background-color: hsl(115, 100%, 95%);
}
#registerContainer input.invalid {
  position: relative;
  border-color: #ff9eb1;
  background-color: hsl(348, 100%, 95%);
}

#registerContainer label:has(input.invalid):after {
  content: 'already exist';
  color: var(--white);
  background-color: crimson;
  height: 1.5rem;
  padding: 0 0.85rem;
  position: absolute;
  right: 1rem;
  top: 0.6rem;
  border-radius: 0.5rem;
  font-size: 0.8rem;

  display: flex;
  justify-content: center;
  align-items: center;
}
#registerContainer label:has(#confirmPasswordInputReg.invalid):after {
  content: "doesn't match";
}

/*//////////  Commander Room  //////////*/

.commander-card {
  position: relative;
  grid-column: 2 / -2;
  align-self: center;
  justify-self: center;

  width: fit-content;
  max-width: 100%;
  padding: 1.5rem;
  background-color: var(--message-bg);
  border-radius: 1.5rem;
  color: var(--font-color);

  display: grid;
  grid-template-columns: 1fr;

  /* filter: drop-shadow(0 2px 0 hsla(45deg 50% 25% / 0.05)); */
}

.commander-card:before {
  content: "";
  position: absolute;
  z-index: 0;
  bottom: 1px;
  right: -0.75rem;
  height: 1.5rem;
  width: 1.5rem;
  background-color: var(--message-bg);
  border-bottom-left-radius: 1rem;
}

.commander-card:after {
  content: "";
  position: absolute;
  z-index: 1;
  bottom: 0;
  right: -0.75rem;
  width: 0.75rem;
  height: calc(1.5rem + 1px);
  background-color: var(--body-bg);
  border-bottom-left-radius: 0.75rem;
}

.commander-card img {
  border-radius: 0.5rem;
  width: 100%;
}

.user-message {
  font-size: 1.5rem;
  font-weight: 500;
}

/* .message-tail {
  position: absolute;
  left: -100px;
  bottom: 0;
} */

.username {
  position: absolute;
  left: 50%;
  bottom: 0;
  transform: translate(-50%, calc(100% + 0.5rem));
  color: var(--light-color);
  font-size: 0.75rem;
  mix-blend-mode: difference;
}

.commander-card.hidden,
.edit-container.hidden {
  display: none;
}

.edit-container {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  min-height: 100dvh;
  padding: 1rem;

  display: grid;
  align-items: center;
  grid-template-columns: 1fr min(450px, 100%) 1fr;

  z-index: 999;
}

.bg-fading {
  position: fixed;
  inset: 0;
  background-color: hsla(0deg 0 0 / 0.65);
}

/*//////////  Color Themes Switcher  //////////*/

#themes-container {
  display: grid;
  gap: 0.5rem;
  grid-template-columns: repeat(auto-fill, minmax(4rem, 1fr));
}

.color-option {
  position: relative;
  cursor: pointer;
}
.color-option input[type="radio"] {
  display: none; /* скрываем стандартную радио кнопку */
}

.color-preview-bg {
  width: 100%;
  height: 4rem;
  position: relative;
  border-radius: 0.75rem;
  display: flex;
  justify-content: center;
  align-items: center;
}
.color-preview {
  width: 2rem;
  height: 1.25rem;
  border-radius: 0.25rem;
}
.color-option input[type="radio"]:checked + .color-preview-bg {
  box-shadow: inset 0 0 0 3px #0d0c22, inset 0 0 0 5px #fff;
}

.color-preview-bg:has(img) {
  align-items: stretch;
}
.color-preview-bg img {
  width: 100%;
  padding: 1rem;
}

.color-preview-bg:hover {
  box-shadow: inset 0 0 0 2px hsla(243deg 48% 9% / 0.2);
}

/*//////////  Fullscreen  //////////*/

.commander-card img {
  cursor: pointer;
}

.commander-card img.fullscreen {
  position: fixed;
  inset: 0;
  width: 100%;
  height: 100%;
  object-fit: contain;
  border-radius: 0;
  z-index: 1000;
}
body:has(img.fullscreen):after {
  content: '';
  position: fixed;
  inset: 0;
  background-color: black;
  z-index: 999;
}

/*//////////  Responsive  //////////*/

@media (max-width: 512px) {
  .commander-card {
    width: fit-content;
    max-width: 80%;
  }

  header .logo {
    font-size: calc(2rem / 1.618);
  }
}

@media (max-width: 414px) {
  main {
    padding: 0;
    align-items: flex-start;
  }

  .login-card {
    border-radius: 0;
    padding: 1.5rem;
    padding-top: 4rem;
    min-height: 100dvh;
    margin-top: 0;
    box-shadow: none;
  }

  .edit-container {
    padding: 0;
  }
  .edit-card {
    border-radius: 0;
    padding: 1.5rem;
    padding-top: 4rem;
    min-height: 100dvh;
    margin-top: 0;
  }
}

